--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,60 @@ body {
   font-size: 16px;
   color: #303846;
 }
+
+header {
+  background: #ffffff;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.fixed {
+  position: fixed;
+  right: 0;
+  left: 0;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo {
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.header-logo-img img {
+  width: 45px;
+  height: auto;
+}
+
+.header-logo-text {
+  padding-left: 10px;
+  font-weight: bolder;
+}
+
+.header-nav-list {
+  padding-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.header-nav-list li {
+  padding: 0 15px;
+}
+
+.header-nav-list a {
+  text-decoration: none;
+  color: #303846;
+  font-weight: bold;
+}
+
+
+
